# Synapse

./: .gitignore  BUG_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FINAL_LAUNCH_REPORT.md  FINAL_RELEASE_CHECKLIST.md  KNOWN_LIMITATIONS.md  LAUNCH_BLOCKERS.md  NEXT_STEPS.md  NOTICE  README.md  RELEASE_NOTES_v0.1.md  SECURITY.md  SECURITY_REVIEW.md  package-lock.json  package.json  pyproject.toml  turbo.json
audit-rc/: ARCHITECTURE_REALITY.md  DOC_AUDIT.md  GITHUB_REVIEW.md  LEGAL_AUDIT.md  README.md  README_REWRITE.md  RELEASE_SCORE.md  REPOSITORY_INVENTORY.md  SECURITY_REVIEW.md
daemon/: Cargo.toml
daemon/src/: lib.rs  main.rs
daemon/src/ipc/: mod.rs
daemon/src/protocol/: mod.rs
daemon/src/security/: capability.rs  mod.rs
daemon/src/trust/: mod.rs  reputation.rs
daemon/tests/: engine.rs  ipc_socket.rs  protocol.rs  trust_reputation.rs
docs/: ARCHITECTURE.md  DOC_AUDIT_REPORT.md  INSPIRATIONS.md  PROTOCOL.md  ROADMAP.md  TRUST_MODEL.md
docs/diagrams/: README.md  a2a-task-flow.md  architecture.md  capability-flow.md  identity-flow.md  trust-flow.md  vault-flow.md
examples/cross-device-task-delegation/: README.md  run_laptop.py  run_vps.py  shared_setup.py
examples/malicious-sender-rejection/: README.md  demo.py
examples/vps-handoff-no-raw-keys/: README.md  demo.py  demo.tape
spinout/: README.md
spinout/security-workers/compliance/india-compliance/: README.md  india_compliance.py
spinout/synapse-backend-architect-mcp/: README.md  package.json
spinout/synapse-backend-architect-mcp/src/: design_auth.ts  design_microservices.ts  design_queue.ts  design_schema.ts  index.ts  scaffold_api.ts  server.ts  types.ts
spinout/synapse-backend-architect-mcp/test/: design_auth.test.ts  design_microservices.test.ts  design_queue.test.ts  design_schema.test.ts  scaffold_api.test.ts
spinout/synapse-context-mcp/: README.md  package.json
spinout/synapse-context-mcp/src/: context.ts  index.ts  server.ts
spinout/synapse-context-mcp/test/: context.test.ts
spinout/synapse-memory-mcp/: README.md  package.json
spinout/synapse-memory-mcp/src/: client.ts  index.ts  protocol.ts  server.ts
spinout/synapse-memory-mcp/test/: client.test.ts  protocol.test.ts
spinout/synapse-router/: README.md  pyproject.toml
spinout/synapse-router/synapse/router/: __init__.py  cost.py  intelligent_router.py
spinout/synapse-skills-mcp/: README.md  package.json  tsconfig.json
spinout/synapse-skills-mcp/src/: index.ts  server.ts  skill.ts
spinout/synapse-skills-mcp/test/: skill.test.ts
tests/unit/: README.md  test_capabilities.py  test_secret_detector.py  test_security_agents.py  test_supply_chain.py  test_zero_trust.py
