# SPDX-License-Identifier: Apache-2.0
# Copyright (c) 2026 Jai Sogani. Licensed under the Apache License, Version 2.0.
#
# Synapse — identity, trust, reputation, and secure secret handoff for AI agents.

[project]
name = "synapse"
version = "0.1.0"
description = "Identity, trust, reputation, and secure secret handoff for AI agents."
authors = [{ name = "Jai Sogani" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
# Opt-in mTLS at the application layer. The HMAC trust layer works without it;
# install `synapse[mtls]` if you want self-signed mutual TLS instead of relying
# on Tailscale / WireGuard / HTTPS reverse proxy.
mtls = [
    "cryptography>=42",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "cryptography>=42",
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "packages/synapse-core",
    "packages",
    "packages/synapse-cli",
]
testpaths = ["tests", "packages/adapters", "packages/synapse-cli/tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
