# SPDX-License-Identifier: Apache-2.0
# Copyright (c) 2026 Jai Sogani. Licensed under the Apache License, Version 2.0.
#
# The Synapse daemon: identity, trust, reputation, and secure secret handoff for AI agents.

[package]
name = "synapse-daemon"
description = "Synapse daemon — identity, trust, reputation, and Synapse Protocol v1.0."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "synapse_daemon"
path = "src/lib.rs"

[[bin]]
name = "synapsed"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
